# easyeda-python-sdk

./: .gitignore  README.md  pyproject.toml
easyeda/: __init__.py
easyeda/core/: __init__.py  canvas.py  geometry.py  layers.py  pcb.py
